# General_CPP_Project

./: .gitignore  CMakeLists.txt  README.md  requirements.txt
docs/: Doxyfile.in
scripts/: install_dependencies.bat  install_dependencies.sh
src/: CMakeLists.txt  main.cpp
tests/: CMakeLists.txt  test_main.cpp
